; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_raw_ip6.c_rip6_detach.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_raw_ip6.c_rip6_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.inpcb = type { i32* }

@.str = private unnamed_addr constant [12 x i8] c"rip6_detach\00", align 1
@M_PCB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*)* @rip6_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rip6_detach(%struct.socket* %0) #0 {
  %2 = alloca %struct.socket*, align 8
  %3 = alloca %struct.inpcb*, align 8
  store %struct.socket* %0, %struct.socket** %2, align 8
  %4 = load %struct.socket*, %struct.socket** %2, align 8
  %5 = call %struct.inpcb* @sotoinpcb(%struct.socket* %4)
  store %struct.inpcb* %5, %struct.inpcb** %3, align 8
  %6 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %7 = icmp eq %struct.inpcb* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 @panic(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %1
  %11 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %12 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %10
  %16 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %17 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = load i32, i32* @M_PCB, align 4
  %20 = call i32 @FREE(i32* %18, i32 %19)
  %21 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %22 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %21, i32 0, i32 0
  store i32* null, i32** %22, align 8
  br label %23

23:                                               ; preds = %15, %10
  %24 = load %struct.inpcb*, %struct.inpcb** %3, align 8
  %25 = call i32 @in6_pcbdetach(%struct.inpcb* %24)
  ret i32 0
}

declare dso_local %struct.inpcb* @sotoinpcb(%struct.socket*) #1

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @FREE(i32*, i32) #1

declare dso_local i32 @in6_pcbdetach(%struct.inpcb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
